# MLOps-Lab3

./: .gitignore  Dockerfile  Makefile  README.md  app.py  best_model.onnx  labels.json  pyproject.toml  requirements.txt
.github/workflows/: CDCI.yml  new_deploy_hf.yml
api/: fastapi_main.py
cli/: cli.py
mylib/: model.py
tests/: test_api.py  test_cli.py  test_model.py
train/: data.py  model.py  serialize.py  train.py
