[project]
name = "mlops-lab1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.123.10",
    "uvicorn>=0.38.0",
    "pillow>=12.0.0",
    "onnxruntime>=1.23.2",
    "python-multipart>=0.0.20",
    "black>=25.11.0",
    "pylint>=4.0.4",
    "torchvision>=0.24.1",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "click>=8.3.1",
]

